
	* iTunesFS.xcodeproj: HIDPI images build flag added.
	  I don't have HIDPI images, though.

	* iTunesFS.xcodeproj: SDKROOT syntax did change a while
	  ago

	* iTunesFileSystem.m, iTunesLibrary.m, iTunesPlaylist.m, iTunesTrack.m:
	  Replaced all occurrences of NSStringFromClass(self->isa) [deprecated]
	  with object_getClassName(self)

	* iPodLibrary.m: fixed incompatible pointer type

2012-08-07  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.3.2

	* iTunesFormatFile.m: fixed formatter retrieval bugs in -getFormatter

	* iTunesPlaylist.[hm]: added NSFileCreationDate and
	  NSFileModificationDate fileAttributes to improve Finder cache flushes
	  (folders are updated faster in Finder)

	* PlaylistsTrackFormat.txt: more examples added

2012-07-25  Marcus Mueller  <znek@mulle-kybernetik.com>

	* GNUmakefile, iPodLibrary.m, iTunesLibrary.m: ported to Linux

2012-02-19  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.3.1

	* iTunesFS.xcodeproj: reenabled ppc for Release builds, as ppc also
	  returned in OSXFUSE 2.3.9 user libraries (which we link against and
	  hence need ppc in order to support ppc binaries).

2011-09-23  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.3.0

	* Link against OSXFUSE (http://osxfuse.github.com/) on MacOS X as of
	  now. As a consequence of the OSXFUSE build process, PPC support
	  is removed.

2011-05-25  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.3b1

	* iTunesTrack.[hm]: extract "Comments" from iTunes library and expose
	  as "comments" property

	* English.lproj/{AlbumsTrackFormat.txt, PlaylistsTrackFormat.txt}:
	  documented %(comments)

2011-04-23  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.2

	* iPodLibrary.m: extract a lot more properties from track items,
	  persistentID from playlists

	* iTunesTrack.[hm], iTunesPlaylist.[hm]: merged init methods, provide
	  "keys" for representations

	* iTunesTrack.[hm]: also added quite a lot new properties
