@@ -14,6 +14,8 @@
 
 	* iPodLibrary.m: fixed incompatible pointer type
 
+	* iPodLibrary.m: fixed format string bugs on __LP64__ platforms
+
 2012-08-07  Marcus Mueller  <znek@mulle-kybernetik.com>
 
 	* v1.3.2
